--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://themezee.com/themes/merlin/
 Author: ThemeZee
 Author URI: http://themezee.com
 Description: Merlin is a beautiful designed Magazine WordPress theme with a responsive layout. The theme comes with a gorgeous Post Slider, Magazine Homepage template and a Header Widget area. Settings can be configured easily in the Customizer. 
-Version: 1.0.7
+Version: 1.0.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: merlin
@@ -626,7 +626,7 @@ textarea {
 }
 
 /* Fullwidth Template */
-.fullwidth .content-area {
+.site-content .fullwidth-content-area {
 	float: none;
 	width: 100%;
 	padding: 0;
@@ -2160,7 +2160,8 @@ object {
 		padding: 1.5em;
 	}
 
-	.content-area {
+	.content-area,
+	.site-content .fullwidth-content-area {
 		padding-right: 1.5em;
 	}
 	
@@ -2454,7 +2455,7 @@ object {
 	}
 	
 	.content-area, 
-	.fullwidth .content-area {
+	.site-content .fullwidth-content-area {
 		float: none;
 		width: 100%;
 		padding: 1.5em;
@@ -2726,7 +2727,7 @@ object {
 @media only screen and (max-width: 30em) {
 	
 	.content-area, 
-	.fullwidth .content-area {
+	.site-content .fullwidth-content-area {
 		padding: 1.2em;
 	}
 	
