added new upgrade control and google analytics campaign urls

--- a/css/customizer.css
+++ b/css/customizer.css
@@ -23,3 +23,10 @@
 #customize-control-merlin_control_slider_activate {
 	margin-bottom: 0;
 }
+
+#customize-control-merlin_control_upgrade div {
+	margin: 4px 0 32px;
+}
+#customize-control-merlin_control_upgrade div .customize-control-title {
+	margin-bottom: 4px;
+}
