fixed styling of archive description

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://themezee.com/themes/merlin/
 Author: ThemeZee
 Author URI: http://themezee.com
 Description: Merlin is a beautiful designed Magazine WordPress theme with a responsive layout. The theme comes with a gorgeous Post Slider, Magazine Homepage template and a Header Widget area. Settings can be configured easily in the Customizer. 
-Version: 1.1.1
+Version: 1.1.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: merlin
@@ -1729,6 +1729,10 @@ textarea {
 	text-transform: uppercase;
 	color: #fff;
 	background: #2299cc;
+}
+
+.archive-description {
+	color: #666;
 }
 
 .entry-tags .meta-tags a {
