added setting to disable post navigation

--- a/css/customizer.css
+++ b/css/customizer.css
@@ -6,17 +6,23 @@
  * @package Merlin
  */
 
+.customize-control-checkbox {
+    margin-bottom: 4px;
+}
+
 #customize-control-merlin_control_latest_posts_title,
 #customize-control-merlin_control_post_content,
+#customize-control-merlin_control_post_footer_headline,
 #customize-control-merlin_control_postmeta_headline,
 #customize-control-merlin_control_footermeta_headline,
 #customize-control-merlin_control_slider_category,
 #customize-control-merlin_control_slider_limit,
 #customize-control-merlin_control_slider_animation {
-	margin-top: 12px;
+	margin-top: 16px;
 }
 
 #customize-control-merlin_control_sticky_nav_headline,
+#customize-control-merlin_control_post_footer_headline,
 #customize-control-merlin_control_postmeta_headline,
 #customize-control-merlin_control_footermeta_headline,
 #customize-control-merlin_control_post_image_single_header,
