updated upgrade control and made themezee.com links translateable

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Merlin
-Theme URI: http://themezee.com/themes/merlin/
+Theme URI: https://themezee.com/themes/merlin/
 Author: ThemeZee
-Author URI: http://themezee.com
+Author URI: https://themezee.com
 Description: Merlin is a beautiful designed Magazine WordPress theme with a responsive layout. The theme comes with a gorgeous Post Slider, Magazine Homepage template and a Header Widget area. Settings can be configured easily in the Customizer. 
 Version: 1.1.2
 License: GNU General Public License v2 or later
