--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/merlin/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Merlin is a beautiful designed Magazine WordPress theme with a responsive layout. The theme comes with a gorgeous Post Slider, Magazine Homepage template and a Header Widget area. Settings can be configured easily in the Customizer. 
-Version: 1.1.3
+Version: 1.1.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: merlin
@@ -352,7 +352,6 @@ acronym {
 
 mark,
 ins {
-	background: #fff9c0;
 	text-decoration: none;
 }
 
@@ -1783,6 +1782,33 @@ textarea {
 .post-pagination .current {
 	color: #fff;
 	background-color: #2299cc;
+}
+
+/* Infinite Scroll Pagination */
+.infinite-scroll .post-pagination {
+	display: none;
+}
+
+.infinite-scroll #infinite-handle span {
+	display: inline-block;
+	margin: 0;
+	padding: 0.5em 0.8em;
+	font-family: 'Hammersmith One', Tahoma, Arial;
+	font-size: 14px;
+	font-size: 0.875rem;
+	color: #fff;
+	background: #2299cc;
+	text-transform: uppercase;
+	text-decoration: none;
+	-webkit-transition: all 0.4s ease;
+	-moz-transition: all 0.4s ease;
+	-ms-transition: all 0.4s ease;
+	-o-transition: all 0.4s ease;
+	transition: all 0.4s ease;
+}
+
+.infinite-scroll #infinite-handle span:hover {
+	background-color: #444;
 }
 
 /* Breadcrumbs */
