--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/merlin/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Merlin is a beautiful designed Magazine WordPress theme with a responsive layout. The theme comes with a gorgeous Post Slider, Magazine Homepage template and a Header Widget area. Settings can be configured easily in the Customizer. 
-Version: 1.1.4
+Version: 1.1.5
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: merlin
@@ -659,6 +659,7 @@ textarea {
 	font-family: 'Roboto', Tahoma, Arial;
 	font-size: 38px;
 	font-size: 2.375rem;
+	font-weight: bold;
 	text-decoration: none;
 	-webkit-transition: all 0.4s ease;
 	-moz-transition: all 0.4s ease;
@@ -667,8 +668,23 @@ textarea {
 	transition: all 0.4s ease;
 }
 
-.site-branding a:hover .site-title {
-	color: #333;
+.site-title a:link,
+.site-title a:visited {
+	color: #2299cc;
+}
+
+.site-title a:hover,
+.site-title a:active {
+	color: #444;
+}
+
+.site-branding .custom-logo {
+	margin: 0 1.5em 0 0;
+	padding: 0;
+	border: none;
+	vertical-align: top;
+	max-width: 100%;
+	height: auto;
 }
 
 /* Header Widgets */
@@ -1555,7 +1571,7 @@ textarea {
 
 .entry-title a:hover, 
 .entry-title a:active{
-	color: #222;
+	color: #444;
 }
 
 .type-post .wp-post-image {
