added selected refresh and live preview to site title and tagline settings

--- a/style.css
+++ b/style.css
@@ -720,6 +720,10 @@ textarea {
 	height: auto;
 }
 
+.site-description {
+	margin: 0 0 0.25em;
+}
+
 /* Header Widgets */
 .header-widgets {
 	display: inline;
