--- a/css/customizer.css
+++ b/css/customizer.css
@@ -10,6 +10,10 @@
     margin-bottom: 4px;
 }
 
+#customize-control-merlin_theme_options-site_description {
+	margin-bottom: 16px;
+}
+
 #customize-control-merlin_theme_options-latest_posts_title,
 #customize-control-merlin_theme_options-post_content,
 #customize-control-merlin_theme_options-post_footer_headline,
