--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ Theme URI: https://themezee.com/themes/merlin/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Merlin is a beautiful designed Magazine WordPress theme with a responsive layout. The theme comes with a gorgeous Post Slider, Magazine Homepage template and a Header Widget area. Settings can be configured easily in the Customizer.
-Version: 1.4.2
+Version: 1.4.3
+Requires at least: 5.2
+Tested up to: 5.5
+Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: merlin
